# oset-platform

./: CMakeLists.txt  README.md
cli/: CMakeLists.txt  sset-cli.c  sset_cli.conf
src/: CMakeLists.txt  sset-core.c  sset-core.h  sset.c  version.h.in
src/mods/: CMakeLists.txt
src/mods/application/: CMakeLists.txt
src/mods/application/app_om/: CMakeLists.txt  om-massive.c  om-message.h  om-public.h  om-routine.c  om-session.c  om.c
src/mods/application/app_ran/: readMe.txt
src/mods/application/app_ran/asn1c/common/: asn_internal.h
src/mods/application/app_ran/asn1c/util/: conv.c  conv.h  message.c  message.h
src/mods/application/app_ran/config/: enb.conf  rb.conf  rr.conf  ue.conf
src/mods/application/app_ran/include/: gnb_common.h  gnb_config_parser.h  gnb_interface.h  gnb_manager.h  gnb_task_interface.h  gnb_timer.h
src/mods/application/app_ran/include/mac/: base_ue_buffer_manager.h  harq_softbuffer.h  mac.h  mac_metrics.h  mac_sch_pdu_nr.h  sched_common.h  sched_nr.h  sched_nr_bwp.h  sched_nr_cfg.h  sched_nr_grant_allocator.h  sched_nr_harq.h  sched_nr_interface.h  sched_nr_pdcch.h  sched_nr_rb.h  sched_nr_sch.h  sched_nr_signalling.h  sched_nr_time_rr.h  sched_nr_ue.h  sched_nr_worker.h  ue_cfg_manager.h  ue_nr.h
src/mods/application/app_ran/include/pdcp/: pdcp.h
src/mods/application/app_ran/include/phy/: phy.h  phy_nr_config.h  phy_util.h  prach_work.h  prach_worker.h  slot_worker.h  txrx.h
src/mods/application/app_ran/include/rf/: channel_2c.h  channel_mapping.h  radio.h
src/mods/application/app_ran/include/rlc/: rlc.h
src/mods/application/app_ran/include/rrc/: rrc.h  rrc_asn_fill.h  rrc_cell_asn_fill.h  rrc_cell_asn_fill_inner.h  rrc_interface_types.h  rrc_nr_config.h  rrc_nr_du_manager.h  rrc_nr_security_context.h  rrc_nr_ue.h  rrc_timer.h
src/mods/application/app_ran/lib/common/: asn_helper.h  asn_interface.h  band_helper.cpp  band_helper_2c.cpp  band_helper_2c.h  bearer_manager.c  bearer_manager.h  buffer_interface.c  buffer_interface.h  common_nr.h  liblte_security.cpp  mac_pcap.c  s3g.cpp  security.cpp  security.h  security_private.h  session_common.c  slot_interval.c  slot_interval.h  slot_point.c  slot_point.h  time.c  util_helper.h  zuc.cpp  zuc.h
src/mods/application/app_ran/lib/def/: all_msg_def.h  gtpv1_u_messages_types.h  mac_messages_def.h  mac_messages_types.h  nas_messages_types.h  pdcp_messages_types.h  phy_messages_def.h  phy_messages_types.h
src/mods/application/app_ran/lib/mac/: bsr_nr.h  mac_interface_types.h  mac_metrics.h  mac_rar_pdu_nr.c  mac_rar_pdu_nr.h  mac_sch_pdu_nr.h  sched_interface.h  sched_nr_interface.h  sched_nr_util.c  sched_util.c  sched_util.h
src/mods/application/app_ran/lib/ngap/: ngap_message.c  ngap_message.h
src/mods/application/app_ran/lib/pdcp/: pdcp_entity_base.c  pdcp_entity_base.h  pdcp_entity_nr.c  pdcp_entity_nr.h  pdcp_interface_types.h  pdcp_lib.c  pdcp_lib.h  pdcp_metrics.h
src/mods/application/app_ran/lib/phy/: phy_metrics.h
src/mods/application/app_ran/lib/rf/: rf_buffer.c  rf_metrics.h  rf_timestamp.h
src/mods/application/app_ran/lib/rlc/: rlc_common.c  rlc_common.h  rlc_interface_types.c  rlc_interface_types.h  rlc_lib.c  rlc_lib.h  rlc_metrics.h  rlc_tm.c  rlc_tm.h
src/mods/application/app_ran/lib/rrc/: rrc_interface_types.h  rrc_message.c  rrc_message.h  rrc_message_list.h  rrc_metrics.h  rrc_util.h  rrc_utils.c  rrc_utils.h
src/mods/application/app_ran/src/: gnb.c  gnb_common.h  gnb_config_parser.c  gnb_interface.h  gnb_manager.c  gnb_manager.h  gnb_metrics.h  gnb_task_interface.c  gnb_timer.c  gnb_timer.h
src/mods/application/app_ran/src/mac/: base_ue_buffer_manager.c  base_ue_buffer_manager.h  harq_softbuffer.c  harq_softbuffer.h  mac.c  mac.h  mac_sch_pdu_nr.c  mac_ue.c  mac_ue.h  sched.c  sched.h  sched_bwp.c  sched_bwp.h  sched_cfg.c  sched_cfg.h  sched_common.h  (+43 more)
src/mods/module/algorithm/: CMakeLists.txt
src/mods/module/algorithm/mod_FSPL/: CMakeLists.txt  mod_FSPL.c
src/mods/module/algorithm/mod_MTE/: CMakeLists.txt  MTEnvironmentModel.h  mod_MTE.cpp
src/mods/module/common/: CMakeLists.txt
src/mods/module/common/mod_api/: CMakeLists.txt  mod_api.c
src/mods/module/common/mod_app/: CMakeLists.txt  mod_app.c
src/mods/module/common/mod_console/: CMakeLists.txt  mod_console.c
src/mods/module/common/mod_credis/: CMakeLists.txt  mod_credis.c
src/mods/module/common/mod_event_socket/: CMakeLists.txt  mod_event_socket.c
src/mods/module/common/mod_hiredis/: CMakeLists.txt  mod_hiredis.c
src/mods/module/common/mod_logfile/: CMakeLists.txt  mod_logfile.c
src/mods/module/common/mod_mongo/: CMakeLists.txt  mod_mongo.c
src/mods/module/common/mod_syslog/: CMakeLists.txt  mod_syslog.c
tests/FSPL/: CMakeLists.txt  FSPLModel.cpp  FSPLModel.h
tools/om-udp/: CMakeLists.txt  udp-omc.c  udp-pod.c
visualized/IDE/: CMakeLists.txt  LICENSE
visualized/IDE/docs/: install.md  language_servers.md  omnet depends
visualized/IDE/lib/libclangmm/: CMakeLists.txt
visualized/IDE/share/: openSET-Dev.desktop
visualized/IDE/src/: CMakeLists.txt  autocomplete.cpp  autocomplete.hpp  cmake.cpp  cmake.hpp  compile_commands.cpp  config.cpp  config.hpp  ctags.cpp  debug_lldb.cpp  debug_lldb.hpp  directories.cpp  filesystem.cpp  filesystem.hpp  git.cpp  git.hpp  info.cpp  juci.cpp  menu.cpp  meson.cpp  notebook.cpp  notebook.hpp  project.cpp  project.hpp  project_build.cpp  project_build.hpp  selection_dialog.cpp  source.cpp  source.hpp  source_base.cpp  source_base.hpp  source_clang.cpp  source_diff.cpp  source_generic.cpp  source_language_protocol.cpp  source_language_protocol.hpp  source_spellcheck.cpp  terminal.cpp  tooltips.cpp  usages_clang.cpp  (+3 more)
visualized/IDE/tests/: CMakeLists.txt  cmake_file_api_test.cpp  language_protocol_client_test.cpp  lldb_test.cpp  source_clang_test.cpp  source_key_test.cpp  source_test.cpp  terminal_test.cpp  usages_clang_test.cpp  utility_test.cpp
visualized/IDE/tests/cmake_file_api_test_files/: CMakeLists.txt
visualized/gui/templates/mod_demo/: @template@.conf.xml  @template@.json  CMakeLists.txt  app_template.json  mod_@template@.c
(+230 files in other folders)
