cmake_minimum_required(VERSION 3.00)

add_subdirectory(mod_api)
add_subdirectory(mod_app)
add_subdirectory(mod_console)
add_subdirectory(mod_logfile)
add_subdirectory(mod_syslog)
add_subdirectory(mod_hiredis)
add_subdirectory(mod_credis)
add_subdirectory(mod_mongo)
add_subdirectory(mod_event_socket)

